Implement frontend sending data

--- a/node-express/public/index.html
+++ b/node-express/public/index.html
@@ -13,7 +13,9 @@
     <input class="shortener-input" name="url" />
     <button type="submit" class="shortener-button">Shorten!</button>
   </form>
-  <div class="result"></div>
-  <script src="./js/main.js" type="text/javascript" />
+  <div class="result">
+    <p>Please create a new link</p>
+  </div>
+  <script src="./js/main.js" type="text/javascript" defer></script>
 </body>
 </html>
